--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
         build: .
         container_name: safebox_app
         expose:
-            - "8081"
+            - "8081" # Node.js WebSocket server port
+            - "18888" # Rust antTP HTTP server port
         restart: unless-stopped
 
     caddy:
