--- a/Caddyfile
+++ b/Caddyfile
@@ -1,13 +1,19 @@
 ant.safemedia.com {
     @noSlash path_regexp noSlash ^/[a-f0-9]{64}$
-    
+
     redir @noSlash {http.request.uri}/ 308
 
     # Proxy WebSocket traffic separately
     reverse_proxy /ws* app:8081
 
     # Proxy all other traffic to antTP Rust server
-    reverse_proxy /{path*} app:18888
+    reverse_proxy /{path*} app:18888 {
+        header_up Host {host}
+        header_up X-Real-IP {remote_host}
+        header_up X-Forwarded-For {remote_host}
+        header_up X-Forwarded-Port {server_port}
+        header_up X-Forwarded-Proto {scheme}
+    }
 
     encode gzip
     log {
