--- a/Caddyfile
+++ b/Caddyfile
@@ -3,11 +3,14 @@ mydomain.com {
 
     redir @noSlash {http.request.uri}/ 308
 
+    # Serve simple root message
+    respond / "safebox server"
+
     # Proxy WebSocket traffic separately
     reverse_proxy /ws* app:8081
 
-    # Proxy all other traffic to antTP Rust server
-    reverse_proxy /{path*} app:18888 {
+    # Proxy ONLY paths starting with /anttp/ to Rust AntTP server
+    reverse_proxy /anttp/* app:18888 {
         header_up Host {host}
         header_up X-Real-IP {remote_host}
         header_up X-Forwarded-For {remote_host}
