--- a/Caddyfile
+++ b/Caddyfile
@@ -1,24 +1,30 @@
 ant.safemedia.com {
-  @noSlash path_regexp noSlash ^/[a-f0-9]{64}$
-
+    # Redirect hash-only paths missing trailing slash
+    @noSlash path_regexp noSlash ^/[a-f0-9]{64}$
     redir @noSlash {http.request.uri}/ 308
 
-    # Serve simple root message
+    # Serve simple root response
     respond / "safebox server"
 
-    # Proxy WebSocket traffic separately
+    # Proxy WebSocket traffic to Node.js
     reverse_proxy /ws* app:8081
 
     # Proxy ONLY paths starting with /anttp/ to Rust AntTP server
-    reverse_proxy /anttp/* app:18888 {
-        header_up Host {host}
-        header_up X-Real-IP {remote_host}
-        header_up X-Forwarded-For {remote_host}
-        header_up X-Forwarded-Port {server_port}
-        header_up X-Forwarded-Proto {scheme}
+    # Strip the /anttp prefix before forwarding
+    handle_path /anttp/* {
+        reverse_proxy app:18888 {
+            header_up Host {host}
+            header_up X-Real-IP {remote_host}
+            header_up X-Forwarded-For {remote_host}
+            header_up X-Forwarded-Port {server_port}
+            header_up X-Forwarded-Proto {scheme}
+        }
     }
 
+    # Enable gzip compression
     encode gzip
+
+    # Log to stdout
     log {
         output stdout
     }
