--- a/Caddyfile
+++ b/Caddyfile
@@ -1,29 +1,14 @@
 ant.safemedia.com {
-    # Redirect hash-only paths missing trailing slash
-    @noSlash path_regexp noSlash ^/[a-f0-9]{64}$
-    redir @noSlash {http.request.uri}/ 308
+    reverse_proxy app:8081
 
-    # Serve simple root response
-    respond / "safebox server"
-
-    # Proxy WebSocket traffic to Node.js
+    # Proxy WebSocket traffic separately
     reverse_proxy /ws* app:8081
 
-    # Proxy ONLY paths starting with /anttp/ to Rust AntTP server
-    handle_path /anttp/* {
-        reverse_proxy app:18888 {
-            header_up Host {host}
-            header_up X-Real-IP {remote_host}
-            header_up X-Forwarded-For {remote_host}
-            header_up X-Forwarded-Port {server_port}
-            header_up X-Forwarded-Proto {scheme}
-        }
-    }
+    # Proxy all other traffic to antTP Rust server
+    reverse_proxy /{path*} app:18888
 
-    # Enable gzip compression
     encode gzip
 
-    # Log to stdout
     log {
         output stdout
     }
