--- a/Caddyfile
+++ b/Caddyfile
@@ -1,11 +1,24 @@
 ant.safemedia.com {
-    reverse_proxy app:8081
+ # Show 'safebox server' on root /
+    respond / "safebox server"
 
     # Proxy WebSocket traffic separately
     reverse_proxy /ws* app:8081
 
-    # Proxy all other traffic to antTP Rust server
-    reverse_proxy /{path*} app:18888
+    # Proxy ONLY paths starting with /anttp/
+    # Strip /anttp prefix before forwarding to Rust server
+    handle_path /anttp/* {
+        reverse_proxy app:18888 {
+            header_up Host {host}
+            header_up X-Real-IP {remote_host}
+            header_up X-Forwarded-For {remote_host}
+            header_up X-Forwarded-Port {server_port}
+            header_up X-Forwarded-Proto {scheme}
+        }
+    }
+
+    # Do NOT forward any other paths (e.g., /91d16e58... or others)
+    # They will fall through and get 404 by default
 
     encode gzip
 
