--- a/Caddyfile
+++ b/Caddyfile
@@ -15,6 +15,11 @@ ant.safemedia.com {
             header_up X-Forwarded-For {remote_host}
             header_up X-Forwarded-Port {server_port}
             header_up X-Forwarded-Proto {scheme}
+
+            handle_response {
+               @redirect header Location ^/
+               header Location add_prefix /anttp
+            }
         }
     }
 
