--- a/Caddyfile
+++ b/Caddyfile
@@ -1,12 +1,13 @@
 ant.safemedia.com {
- # Show 'safebox server' on root /
+
+# Show 'safebox server' on root /
+
     respond / "safebox server"
 
     # Proxy WebSocket traffic separately
     reverse_proxy /ws* app:8081
 
-    # Proxy ONLY paths starting with /anttp/
-    # Strip /anttp prefix before forwarding to Rust server
+    # Proxy /anttp/* to app:18888, strip /anttp prefix when sending
     handle /anttp/* {
         uri strip_prefix /anttp
         reverse_proxy app:18888 {
@@ -16,10 +17,13 @@ ant.safemedia.com {
             header_up X-Forwarded-Port {server_port}
             header_up X-Forwarded-Proto {scheme}
 
+            # Rewrite Location headers from backend redirects to add /anttp prefix back
             handle_response {
-               @redirect header Location ^/
-               header Location add_prefix /anttp
+                @redirect header Location ^/
+                header Location add_prefix /anttp
             }
+
+            # Optionally, rewrite links inside HTML body (harder, requires sub_filter or similar)
         }
     }
 
@@ -30,4 +34,5 @@ ant.safemedia.com {
     log {
         output stdout
     }
+
 }
