--- a/Caddyfile
+++ b/Caddyfile
@@ -2,14 +2,13 @@ ant.safemedia.com {
 
 # Show 'safebox server' on root /
 
-    respond / "safebox server"
+    respond / "safebox server test"
 
     # Proxy WebSocket traffic separately
     reverse_proxy /ws* app:8081
 
     # Proxy /anttp/* to app:18888, strip /anttp prefix when sending
     handle_path /anttp/* {
-        uri strip_prefix /anttp
         reverse_proxy app:18888 {
             header_up Host {host}
             header_up X-Real-IP {remote_host}
