--- a/Caddyfile
+++ b/Caddyfile
@@ -7,9 +7,8 @@ ant.safemedia.com {
     # Proxy WebSocket traffic separately
     reverse_proxy /ws* app:8081
 
-    # Proxy /anttp/* to app:18888, strip /anttp prefix when sending
-    handle_path /anttp/* {
-        rewrite * {path}
+    handle /anttp/* {
+        uri strip_prefix /anttp
         reverse_proxy app:18888 {
             header_up Host {host}
             header_up X-Real-IP {remote_host}
@@ -17,18 +16,10 @@ ant.safemedia.com {
             header_up X-Forwarded-Port {server_port}
             header_up X-Forwarded-Proto {scheme}
 
-            # Rewrite Location headers from backend redirects to add /anttp prefix back
-            handle_response {
-                @redirect header Location ^/
-                header Location add_prefix /anttp
-            }
-
-            # Optionally, rewrite links inside HTML body (harder, requires sub_filter or similar)
+            # Rewrite Location header in responses from backend
+            header_down Location replace ^/(.*)$ /anttp/{1}
         }
     }
-
-    # Do NOT forward any other paths (e.g., /91d16e58... or others)
-    # They will fall through and get 404 by default
 
 
     log {
