--- a/Caddyfile
+++ b/Caddyfile
@@ -12,7 +12,7 @@ ant.safemedia.com {
             header_up X-Forwarded-Port {server_port}
             header_up X-Forwarded-Proto {scheme}
 
-            header_down Location replace ^/(.*)$ /anttp/{1}
+            header_down Location replace "^/(.*)$" "/anttp/{1}"
         }
     }
 
