--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ version: "3.8"
 services:
     anttp_server:
         build:
-            context: ./anttp
+            context: ..
+            dockerfile: anttp/Dockerfile
         container_name: anttp_server
         expose:
             - "8081" # Node.js WebSocket server port
