--- a/dweb/Dockerfile
+++ b/dweb/Dockerfile
@@ -23,4 +23,5 @@ RUN cargo build --release
 
 EXPOSE 8083
 
-CMD ["./target/release/dweb"]
+CMD ["./target/release/dweb", "serve", "--port", "8083"]
+
