Revert "Update Dockerfile"
This reverts commit 20c900386ba5c2a987ba42b7bc74f35e5bf5868b.

--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -16,6 +16,15 @@ anttp.safemedia.com {
     # Proxy all other traffic to antTP Rust server
     reverse_proxy anttp_server:18888
 
+    @html {
+        header Content-Type text/html*
+    }
+
+    filter @html {
+        find_body "</body>"
+        replace "<div>header</div></body>"
+    }
+
     encode gzip
 
     log {
