--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,9 @@ services:
         restart: unless-stopped
 
     caddy:
-        image: caddy:2-alpine
+        build:
+            context: ./caddy
+            dockerfile: Dockerfile
         container_name: caddy_reverse_proxy
         restart: unless-stopped
         ports:
@@ -30,7 +32,7 @@ services:
             - anttp_server
             - dweb_server
         volumes:
-            - ./Caddyfile:/etc/caddy/Caddyfile
+            - ./caddy/Caddyfile:/etc/caddy/Caddyfile
             - caddy_data:/data
             - caddy_config:/config
 
